--- a/notebooks/2_BasicModels/logistic_regression.ipynb
+++ b/notebooks/2_BasicModels/logistic_regression.ipynb
@@ -18,18 +18,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
+      "Extracting /tmp/data/train-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/data/train-labels-idx1-ubyte.gz\n",
+      "Extracting /tmp/data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/data/t10k-labels-idx1-ubyte.gz\n"
      ]
     }
    ],
@@ -43,10 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters\n",
@@ -77,32 +73,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost= 1.182138959\n",
-      "Epoch: 0002 cost= 0.664778162\n",
-      "Epoch: 0003 cost= 0.552686284\n",
-      "Epoch: 0004 cost= 0.498628905\n",
-      "Epoch: 0005 cost= 0.465469866\n",
-      "Epoch: 0006 cost= 0.442537872\n",
-      "Epoch: 0007 cost= 0.425462044\n",
-      "Epoch: 0008 cost= 0.412185303\n",
-      "Epoch: 0009 cost= 0.401311587\n",
-      "Epoch: 0010 cost= 0.392326203\n",
-      "Epoch: 0011 cost= 0.384736038\n",
-      "Epoch: 0012 cost= 0.378137191\n",
-      "Epoch: 0013 cost= 0.372363752\n",
-      "Epoch: 0014 cost= 0.367308579\n",
-      "Epoch: 0015 cost= 0.362704660\n",
-      "Epoch: 0016 cost= 0.358588599\n",
-      "Epoch: 0017 cost= 0.354823110\n"
+      "Epoch: 0001 cost= 1.183633265\n",
+      "Epoch: 0002 cost= 0.665340310\n",
+      "Epoch: 0003 cost= 0.552857642\n",
+      "Epoch: 0004 cost= 0.498713756\n",
+      "Epoch: 0005 cost= 0.465501249\n",
+      "Epoch: 0006 cost= 0.442544366\n",
+      "Epoch: 0007 cost= 0.425458099\n",
+      "Epoch: 0008 cost= 0.412192440\n",
+      "Epoch: 0009 cost= 0.401389312\n",
+      "Epoch: 0010 cost= 0.392395974\n",
+      "Epoch: 0011 cost= 0.384731980\n",
+      "Epoch: 0012 cost= 0.378150640\n",
+      "Epoch: 0013 cost= 0.372411025\n",
+      "Epoch: 0014 cost= 0.367290011\n",
+      "Epoch: 0015 cost= 0.362742065\n",
+      "Epoch: 0016 cost= 0.358565407\n",
+      "Epoch: 0017 cost= 0.354891226\n",
+      "Epoch: 0018 cost= 0.351456078\n",
+      "Epoch: 0019 cost= 0.348339714\n",
+      "Epoch: 0020 cost= 0.345391696\n",
+      "Epoch: 0021 cost= 0.342750661\n",
+      "Epoch: 0022 cost= 0.340244366\n",
+      "Epoch: 0023 cost= 0.337914980\n",
+      "Epoch: 0024 cost= 0.335752568\n",
+      "Epoch: 0025 cost= 0.333693009\n",
+      "Optimization Finished!\n",
+      "Accuracy: 0.889667\n"
      ]
     }
    ],
@@ -125,38 +129,47 @@
     "            avg_cost += c / total_batch\n",
     "        # Display logs per epoch step\n",
     "        if (epoch+1) % display_step == 0:\n",
-    "            print \"Epoch:\", '%04d' % (epoch+1), \"cost=\", \"{:.9f}\".format(avg_cost)\n",
+    "            print(\"Epoch:\", '%04d' % (epoch+1), \"cost=\", \"{:.9f}\".format(avg_cost))\n",
     "\n",
-    "    print \"Optimization Finished!\"\n",
+    "    print(\"Optimization Finished!\")\n",
     "\n",
     "    # Test model\n",
     "    correct_prediction = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1))\n",
     "    # Calculate accuracy for 3000 examples\n",
     "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
-    "    print \"Accuracy:\", accuracy.eval({x: mnist.test.images[:3000], y: mnist.test.labels[:3000]})"
+    "    print(\"Accuracy:\", accuracy.eval({x: mnist.test.images[:3000], y: mnist.test.labels[:3000]}))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
