--- a/notebooks/2_BasicModels/nearest_neighbor.ipynb
+++ b/notebooks/2_BasicModels/nearest_neighbor.ipynb
@@ -17,19 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
+      "Extracting /tmp/data/train-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/data/train-labels-idx1-ubyte.gz\n",
+      "Extracting /tmp/data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/data/t10k-labels-idx1-ubyte.gz\n"
      ]
     }
    ],
@@ -44,10 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# In this example, we limit mnist data\n",
@@ -74,7 +70,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -297,36 +292,36 @@
     "        # Get nearest neighbor\n",
     "        nn_index = sess.run(pred, feed_dict={xtr: Xtr, xte: Xte[i, :]})\n",
     "        # Get nearest neighbor class label and compare it to its true label\n",
-    "        print \"Test\", i, \"Prediction:\", np.argmax(Ytr[nn_index]), \\\n",
-    "            \"True Class:\", np.argmax(Yte[i])\n",
+    "        print(\"Test\", i, \"Prediction:\", np.argmax(Ytr[nn_index]), \\\n",
+    "            \"True Class:\", np.argmax(Yte[i]))\n",
     "        # Calculate accuracy\n",
     "        if np.argmax(Ytr[nn_index]) == np.argmax(Yte[i]):\n",
     "            accuracy += 1./len(Xte)\n",
-    "    print \"Done!\"\n",
-    "    print \"Accuracy:\", accuracy"
+    "    print(\"Done!\")\n",
+    "    print(\"Accuracy:\", accuracy)"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
